# tessera

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  Tessera_Base_Spec.md  Tessera_Deep_Learning_Programing_Model.md  Tessera_Examples.md  deeper_think_on_the_model.md  first output.md  pyproject.toml  requirements.txt  skills.md  tessera_benchmarks_delta_rule.json  tessera_runtime  tessera_style_guide.md
archive/src/Tessera_RubinCPX_Compiler_v1_1/: CMakeLists.txt  README.md
archive/src/tessera_scaling_resilience_v1/: CMakeLists.txt
benchmarks/Tessera_Operator_Benchmarks/: CMakeLists.txt  README.md
benchmarks/Tessera_Operator_Benchmarks/common/: device_utils.h  nvtx_helpers.h  timer.h
benchmarks/Tessera_Operator_Benchmarks/docs/: Operator_Benchmarks_Spec_Part1.md  Operator_Benchmarks_Spec_Part2.md
benchmarks/Tessera_Operator_Benchmarks/harness/: op_configs.yaml  op_registry.cpp  op_registry.h  op_utils.h  opbench_main.cpp
benchmarks/Tessera_Operator_Benchmarks/scripts/: opbench.py  opbench_bridge.py  (+2 more)
examples/: CMakeLists.txt  README.md  dnas_schedule_autotune.py
examples/Fast_dLLM_v2/: README.md
examples/advanced/: CMakeLists.txt  README.md
examples/archive/: README.md
examples/attention/: minimax_sparse_attention.py
examples/conformance/: __init__.py  apple_path_ga_ebm_demos.py
examples/diffusion_guidance/: cgg_benchmark.py  cgg_diffusion_gemma.py
examples/getting_started/: basic_tensor_ops.py  compile_and_explain.py  flash_attention_demo.py
examples/optimization/: CMakeLists.txt  README.md  STATUS.md
examples/tessera_ir_pipeline_tutorial_pack/: README.md  requirements.txt  tessera_ir_pipeline_demo.py
research/pddl_instruct/: CMakeLists.txt  README.md
src/: CMakeLists.add_this_snippet.txt  CMakeLists.txt  INDEX.md  README_SRC_INTEGRATION.md
src/Tessera_RubinCPX_Compiler/: CMakeLists.txt
src/collectives/: CMakeLists.txt  README.md
src/graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
src/ir/: TesseraOps.td  TilingInterface_NOTES.md
src/pdll/: CMakeLists.txt  README.md  canon_cleanup.pdll
src/programming_model/: CMakeLists.txt
src/runtime/: CMakeLists.txt
src/scaling_resilience/: CMakeLists.txt  README.md
src/solvers/: CMakeLists.txt
src/spectral/: CMakeLists.txt
src/tessera-neighbors/: README.md  SPEC_Neighbors_and_Halo.md
src/tessera_linalg_solvers/: README.md
src/tessera_neighbors/: CMakeLists.txt  README.md
src/tessera_pm_v1_1_memory_parallel/: CMakeLists.txt
src/tile_opt_fa4/: CMakeLists.txt
src/tpp/: CMakeLists.txt
tests/: CMakeLists.txt  COMPILER_TEST_PLAN.md  MEMORY_AND_PERFORMANCE.md  README.md  __init__.py  conftest.py
tests/_support/: __init__.py  apple.py  apple_inventory.py  compiler_ownership.py  environment.py  nvidia.py  nvidia_numerics.py  nvidia_plugin_cases.py  policy.py
tests/device/: __init__.py
tests/integration/: STATUS.md  __init__.py  test_nvidia_mma_bridge.py  test_nvidia_paged_kv_native.py  test_nvidia_replay_ssm.py
tests/kernel_tests/: README_TESSERA_PERF.md
tests/performance/: __init__.py  test_compiler_performance_plan.py
tests/phase1/: __init__.py  conftest.py  test_constraints.py  test_distributed_api.py  test_effects.py  test_graph_ir.py
tests/phase2/: conftest.py  test_lowering_chain.py
tests/phase3/: conftest.py  test_gpu_target.py  test_tile_ir_lowering.py
tests/phase4/: conftest.py  test_cyclic_distribution.py  test_gpu_collective_insertion.py  test_pipeline_stage_insertion.py
tests/phase5/: conftest.py  test_bayesian_autotuner.py  test_checkpoint_decorator.py  test_deployment_manifest.py  test_insert_recompute.py  test_sparse_inspector.py
tests/phase6/: conftest.py  test_cli_debug_profile_commands.py  test_deep_learning_semantic_core.py  test_dnas_foundation.py  test_end_to_end_matmul_cpu_path.py  test_error_handling_diagnostics_guide.py  test_error_reporter.py  test_language_memory_layout_specs.py  test_production_reliability_foundation.py  test_profiling_autotuning_foundation.py  test_qa_reliability_foundation.py  test_runtime_abi.py  test_runtime_cpu_backend.py  test_shape_inference.py  test_tsol_foundation.py
tests/regression/: STATUS.md
tests/tessera-ir/: .lit_test_times.txt  lit.cfg.py
tests/tessera_numerical_validation/: README.md  requirements.txt  run_all.sh
tests/tessera_tests/: FULL_PROJECT_README.md
tests/tessera_tests_Perf/: DROP_IN_README.md
tests/unit/: _apple_gpu_abi_testutil.py  _diff_lane.py  _nvidia_testutil.py  _subprocess.py  conftest.py  test_accelerator_profiler_context.py  test_accelerator_proof_map.py  test_alphaevolve.py  test_amd_fp8_and_gemm_dispatch.py  test_apple_attention_backward_benchmark.py  test_apple_attention_backward_policy.py  test_apple_attention_benchmark.py  test_apple_attention_resident_variants.py  test_apple_backend_roadmap.py  test_apple_capabilities_in_compile_result.py  test_apple_cholesky_seam_closure.py  test_apple_commit_and_wait_timeout.py  test_apple_compiler_artifacts.py  test_apple_conformance_closeout.py  test_apple_dispatch_telemetry.py  test_apple_dylib.py  test_apple_e2e_native_spine.py  test_apple_epilogue_benchmark.py  test_apple_exact_device_proofs.py  test_apple_execution_inventory.py  test_apple_feature_limit_lowering.py  test_apple_feature_limits.py  test_apple_flash_attn_backward.py  test_apple_fragment.py  test_apple_fusion_descriptor.py  test_apple_fusion_parity.py  test_apple_gemm_schedules.py  test_apple_gpu_abi_registry.py  test_apple_gpu_attention_block_one_cb.py  test_apple_gpu_attn_wrappers.py  test_apple_gpu_auto_batch.py  test_apple_gpu_batched_mha.py  test_apple_gpu_bf16_encode_session.py  test_apple_gpu_bf16_msl_kernels.py  test_apple_gpu_bmm.py  (+1078 more)
tools/profiler/: CMakeLists.txt  LICENSE-APACHE  README.md
tools/profiler 2/: CMakeLists.txt  README.md
tools/tessera-jit/: CMakeLists.txt  tessera_jit.cpp
tools/tessera-opt/: CMakeLists.txt  tessera-opt.cpp
tools/tessera-translate/: CMakeLists.txt  README.md  tessera-translate.cpp
(+4134 files in other folders)
