[build-system]
requires = [
    "setuptools>=65.0",
    "wheel",
    "pybind11>=2.10.0",
    "cmake>=3.20.0",
    "ninja; platform_system != \"Windows\""
]
build-backend = "setuptools.build_meta"

[project]
name = "tessera"
version = "0.1.0"
description = "Next-Generation Deep Learning Programming Model"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Tessera Team", email = "contact@tessera.ai"}
]
keywords = [
    "deep-learning",
    "machine-learning", 
    "attention",
    "transformers",
    "gpu",
    "mlir",
    "compiler"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "scipy>=1.9.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0.0",
    "click>=8.0.0",
    "rich>=12.0.0",
    "tqdm>=4.64.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950"
]
gpu = [
    "nvidia-ml-py3>=7.352.0"
]

[project.urls]
Homepage = "https://tessera.ai"
Repository = "https://github.com/tessera-ai/tessera"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
